Fix vertical alignment of filter checkboxes
Changed filter list items from inline-block to inline-flex with align-items: center
to properly vertically center checkboxes with their labels. Also added cursor: pointer
to labels for better UX.

--- a/src/search.css
+++ b/src/search.css
@@ -337,12 +337,14 @@ div.hit-block .hit-block-heading-container svg {
 }
 
 :host > div .filters li {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   margin: 0 0 0 15px;
 }
 
 :host > div .filters li label {
   padding: 3px;
+  cursor: pointer;
 }
 
 :host > div .filters label {
